fix bug where logo image can overflow container

--- a/htdocs/showcase/revcontent-api-showcase-interstitial-1.0/css/revinterstitial.scss
+++ b/htdocs/showcase/revcontent-api-showcase-interstitial-1.0/css/revinterstitial.scss
@@ -60,7 +60,7 @@ $break-small: 500px;
             display: flex;
             padding: 0 10px;
             img {
-                max-width: 320px;
+                max-width: 100%;
                 max-height: 26px;
             }
         }
